libs/extractor/src/snapshots/extractor__tests__stylex_props_conditional_ternary.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({\n    primary: { color: 'red' },\n    secondary: { color: 'blue' },\n});\nconst el = <div {...stylex.props(isPrimary ? styles.primary : styles.secondary)} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst styles = {\n\t\"primary\": \"a\",\n\t\"secondary\": \"b\"\n};\nconst el = <div {...{ className: isPrimary ? \"a\" : \"b\" }} />;\n",
}
