libs/extractor/src/snapshots/extractor__tests__stylex_props_dynamic_as_non_call.snap
---
source: libs/extractor/src/lib.rs
expression: "extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({ base: (x) => ({ color: x }) });\nconst el = <div {...stylex.props(styles.base)} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).expect_err(\"uncalled dynamic namespace must not survive\").to_string()"
---
"test.tsx:3:34: `stylex.props()` cannot use `styles.base` at build time: an uncalled dynamic namespace or function-value alias cannot be compiled exactly; pass a direct `styles.name(value)` argument to props/attrs instead of escaping the function"
