libs/extractor/src/snapshots/extractor__tests__stylex_props_empty_namespace.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({ empty: {} });\nconst el = <div {...stylex.props(styles.empty)} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "const styles = { \"empty\": \"\" };\nconst el = <div {...{ className: \"\" }} />;\n",
}
