libs/extractor/src/snapshots/extractor__tests__stylex_props_join_styles_compiled_elsewhere.snap
---
source: libs/extractor/src/lib.rs
expression: "extract(\"test.tsx\",\nr\"import * as stylex from '@stylexjs/stylex';\nconst fade = stylex.keyframes({ from: { opacity: 0 }, to: { opacity: 1 } });\nconst colors = stylex.defineVars({ text: 'black' });\nconst styles = stylex.create({\n  base: { animationName: { default: fade, ':hover': 'none' }, color: { default: colors.text, ':hover': 'red' } },\n  bar: (h) => ({ height: h }),\n  none: null,\n});\nexport const A = ({ style, rest }) => <div {...stylex.props(styles.base, style, ...rest, undefined, null, styles, styles.missing, styles?.bar, styles[key]?.x, styles?.['missing'], on && styles.missing, on ? styles.base : styles.missing, on ? styles.missing : styles.base, on ? styles.missing : styles.none)} />;\",\nExtractOption::default()).expect_err(\"escaping dynamic namespace must not survive\").to_string()"
---
"test.tsx:9:131: `stylex.props()` cannot use `styles.bar` at build time: an uncalled dynamic namespace or function-value alias cannot be compiled exactly; pass a direct `styles.name(value)` argument to props/attrs instead of escaping the function\ntest.tsx:9:144: `stylex.props()` cannot use `styles[key]` at build time: an uncalled dynamic namespace or function-value alias cannot be compiled exactly; pass a direct `styles.name(value)` argument to props/attrs instead of escaping the function"
