libs/extractor/src/snapshots/extractor__tests__stylex_props_named_import.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import { create, props } from '@stylexjs/stylex';\nconst styles = create({\n    base: { color: 'red' },\n});\nconst el = <div {...props(styles.base)} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport { create, props } from \"@stylexjs/stylex\";\nconst styles = { \"base\": \"OLcolor-vred\" };\nconst el = <div {...{ className: \"OLcolor-vred\" }} />;\n",
}
