libs/extractor/src/snapshots/extractor__tests__stylex_props_style_x_array.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import stylex from '@stylexjs/stylex';\nconst s = stylex.create({ a: { color: 'red' }, b: { marginTop: '1px' } });\nconst flat = <div {...stylex.props([s.a, s.b])} />;\nconst nested = <div {...stylex.props([s.a, [s.b]])} />;\nconst conditional = <div {...stylex.props([s.a, on && s.b])} />;\"))"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-top",
                value: "1px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst s = {\n\t\"a\": \"OLcolor-vred\",\n\t\"b\": \"OLmargin_dtop-v1px\"\n};\nconst flat = <div {...{ className: \"OLcolor-vred OLmargin_dtop-v1px\" }} />;\nconst nested = <div {...{ className: \"OLcolor-vred OLmargin_dtop-v1px\" }} />;\nconst conditional = <div {...{ className: `OLcolor-vred ${on ? \"OLmargin_dtop-v1px\" : \"\"}` }} />;\n",
}
